Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-18888

Dark color scheme has incorrect selection colors

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Not Evaluated Not Evaluated
    • None
    • Qt Creator 4.4.0, Qt Creator 4.7.0-beta1
    • Editors
    • None
    • Arch Linux

      While the text editor is configurable, the general UI when using the dark theme has incorrect selection colors that cannot be changed.

       

      There are two main instances I've seen for this:

      First is selecting text in UI other than the main code editor. For example, in the following screenshot the bottom two lines are selected:

      This also occurs in all of the UI when adjusting things like build settings, often making it difficult to edit due to barely being able to see what's selected.

       

      Second is locate dialog. As you type, the selection color is very difficult to read:

        1. after.png
          4 kB
          Orgad Shaneh
        2. before.png
          4 kB
          Orgad Shaneh
        3. list-selection.png
          19 kB
          Aaron Barany
        4. locator.png
          20 kB
          Aaron Barany
        5. output selection indicator.png
          7 kB
          Aaron Barany
        6. output-window.png
          19 kB
          Aaron Barany
        7. output-window.png
          19 kB
          Aaron Barany
        8. selected icons after.png
          6 kB
          Aaron Barany
        9. selected icons before.png
          6 kB
          Aaron Barany
        10. selection1.png
          13 kB
          Aaron Barany
        11. selection2.png
          28 kB
          Aaron Barany
        For Gerrit Dashboard: QTCREATORBUG-18888
        # Subject Branch Project Status CR V

            portale Alessandro Portale
            akb825 Aaron Barany
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes