Editor: Fix dark themes

Text selection now uses a subdued blue selection. Selections were
previously nearly impossible to see due to the colors being almost the
same
as unselected text.

Locator now uses the normal text color when highlighting what the user
typed. This fixes a dark text color being used with a dark background,
which was difficult to read. Also make the highlighting background a bit
lighter to improve contrast.

Task-number: QTCREATORBUG-18888
Change-Id: I2f48dc83844270cc832841b94ad5dea9cc6c6f00
Reviewed-by: Orgad Shaneh <orgads@gmail.com>
Reviewed-by: Alessandro Portale <alessandro.portale@qt.io>